<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CalcActivity"
    tools:visibility="visible">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hi"
        android:textColor="@color/purple_500"
        android:textSize="32sp"
        android:paddingTop="50dp"
        android:paddingLeft="77dp"
        android:paddingRight="77dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="170dp"
        android:paddingBottom="50dp">

        <EditText
            android:id="@+id/etFirst"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/firstV"
            android:inputType="number" />

        <EditText
            android:id="@+id/etSecond"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/secondV"
            android:inputType="number" />

        <EditText
            android:id="@+id/etThird"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/thirdV"
            android:inputType="number" />
    </LinearLayout>

    <Button
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:text="@string/count"
        android:textSize="32sp" />

</LinearLayout>